<?xml version="1.0"?>
<package format="2">
  <name>dvs_data_tools</name>
  <version>0.0.0</version>
  <description>The dvs_data_tools package</description>
  <maintainer email="jrodriguezg@us.es">Juan Pablo Rodriguez Gomez</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>dvs_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>dynamic_reconfigure</depend>

  <export>
  </export>
  
</package>
